2007-02-24  Akim Demaille  <akim.demaille@free.fr>

	Mingw portability
	* windows.hh: Don't define NOMINMAX blindly, it may have already
	be defined.

2007-02-21  Remi Humbert  <humbert@gostai.com>

	Fix semaphore: sem_wait interrupted by signal must be restarted
	* semaphore.hxx: in operator-- (int) and operator-- put the sem_wait
	call in a do while loop to restart the call when it is interrupted by
	a signal. If this is not done the assert on the sem_wait return fail
	whenever a signal that stop the sem_wait is received.

2007-02-20  Akim Demaille  <demaille@gostai.com>

	find0
	* containers.hh, containers.hxx (find0): New.
	(for_each): Scope reduction.

2007-02-19  Akim Demaille  <akim.demaille@free.fr>

	* containers.hh, containers.hxx (libport::mhas): New.

2007-02-16  Akim Demaille  <akim@lrde.epita.fr>

	NOMINMAX.
	* windows.hh: Use it to avoid min and max definitions.

2007-02-15  Akim Demaille  <akim@lrde.epita.fr>

	Fix distdir
	* tests/test-escape.stdout: New.

2007-02-15  Akim Demaille  <akim@lrde.epita.fr>

	Fix the test-escape test
	* tests/Makefile.am: Use correct file names.
	Provide the *.cc part too.

2007-02-13  Akim Demaille  <akim.demaille@free.fr>

	ECHO_CMD
	* compiler.hh (SLEEP, ECHO_CMD): New.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	Mingw32 portability
	* network.h (LIBPORT_FD_ISSET): New.
	Use it.

2007-02-12  Akim Demaille  <akim.demaille@free.fr>

	Nicer debug traces
	* network.h: here.
	* compiler.hh: CPP indentation.
	Use ifdef, not if.

2007-02-12  Akim Demaille  <akim.demaille@free.fr>

	Fix separator usage
	* network.h (operator<< (fd_set)): here.

2007-02-12  Akim Demaille  <akim.demaille@free.fr>

	Add missing inline
	* network.h (operator<<): For timeval and fd_set.

2007-02-12  Akim Demaille  <akim.demaille@free.fr>

	Add debug operator<<
	* network.h: For timeval and fd_set.

2007-02-10  Akim Demaille  <akim.demaille@free.fr>

	Import Escape from tc
	* escape.cc, escape.hh, escape.hxx: New.