@@ -1,3 +1,10 @@
+2007-02-25  Akim Demaille  <akim.demaille@free.fr>
+
+	Avoid useless class definitions
+	* singleton-ptr.hh (STATIC_INSTANCE, EXTERN_STATIC_INSTANCE):
+	There is no need to introduce a specific class for each
+	Class,Name combination.
+
 2007-02-24  Akim Demaille  <akim.demaille@free.fr>
 
 	Mingw portability
